# keras-training-kit

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile  _docker_init.sh  docker_launch.sh
ktk/: utils.py
ktk/apps/: evaluate.py  evaluate_tflite.py  save_keras_apps.py  tflite_converter.py  train.py
ktk/apps/config/: evaluate.yaml  evaluate_keras_app.yaml  evaluate_tflite.yaml  evaluate_tflite_keras_app.yaml  save_keras_apps.yaml  tflite_converter.yaml  tflite_converter_keras_app.yaml  train.yaml
ktk/models/: __init__.py  base.py  factory.py  simplednn.py
